                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-01-2006 fixed: All Genres and All Artists items in Music Library now go to next level of filtering and not directly to songs
 - 12-01-2006 updated: Portuguese (Brazil) language file (Thnx to T1000)
 - 12-01-2006 updated: Swedish language file (Thnx to blittan)
 - 12-01-2006 updated: Russian language file (thnx to que_)
 - 12-01-2006 updated: Polish language file (Thnx to napek)
 - 12-01-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 12-01-2006 updated: German language file
 - 12-01-2006 updated: French language file (Thnx to frostbox)
 - 12-01-2006 updated: Italian language file (Thnx to kotix)
 - 12-01-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 12-01-2006 changed: Made all spin controls wrap rather than change direction when the end item is reached.
 - 12-01-2006 fixed: Spin control and Checkmark control align left wasn't working (My Weather)
 - 12-01-2006 fixed: Reverse animations for VisibleChange weren't running.
 - 12-01-2006 fixed: WindowClose events on controls that never render cause infinite loop on window exit.
 - 11-01-2006 changed: SMS style password input shows the current character for 1 second (before changing it to a *).
 - 11-01-2006 fixed: 40 character XBE names are now handled correctly.
 - 11-01-2006 fixed: XPR font rendering was aliased (looked thin).
 - 11-01-2006 fixed: File with no extension called with PlayFile via webserver crash.
 - 11-01-2006 fixed: Slideshow corrupt .xml file (only one picture was shown).
 - 11-01-2006 fixed: hopefully fixed fast wmv's with an updated mplayer.dll